[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Orbitron/static/Orbitron-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://art/objects/Bomb.png" type="Texture" id=3]
[ext_resource path="res://ui/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 1 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -226.0
margin_right = 226.0
size_flags_horizontal = 4
size_flags_vertical = 3
alignment = 1

[node name="Title" type="Label" parent="VBox"]
margin_top = 176.0
margin_right = 452.0
margin_bottom = 245.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Fire in the Hole"
align = 1

[node name="LudumDare" type="Label" parent="VBox"]
margin_top = 249.0
margin_right = 452.0
margin_bottom = 263.0
text = "Made for Ludem Dare 50"

[node name="HSeparator" type="HSeparator" parent="VBox"]
margin_top = 267.0
margin_right = 452.0
margin_bottom = 299.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3

[node name="NewGame" type="Button" parent="VBox"]
margin_top = 303.0
margin_right = 452.0
margin_bottom = 330.0
theme = ExtResource( 2 )
text = "New Game"

[node name="Levels" type="Button" parent="VBox"]
margin_top = 334.0
margin_right = 452.0
margin_bottom = 361.0
theme = ExtResource( 2 )
text = "Level Select"

[node name="Credits" type="Button" parent="VBox"]
margin_top = 365.0
margin_right = 452.0
margin_bottom = 392.0
theme = ExtResource( 2 )
text = "Credits"

[node name="Exit" type="Button" parent="VBox"]
margin_top = 396.0
margin_right = 452.0
margin_bottom = 423.0
theme = ExtResource( 2 )
text = "Exit"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_right = 253.0
size_flags_horizontal = 0

[node name="Godot" type="TextureRect" parent="HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 36.0
margin_right = 181.0
margin_bottom = 32.0
size_flags_vertical = 3
text = "Made with Godot 3.4.4"
valign = 2

[connection signal="pressed" from="VBox/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBox/Levels" to="." method="_on_Levels_pressed"]
[connection signal="pressed" from="VBox/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBox/Exit" to="." method="_on_Exit_pressed"]
